# serializer version: 1
# name: test_api_response_snapshot
  dict({
    'code': 200,
    'data': dict({
      'page': 1,
      'per_page': 10,
      'total_count': 3,
      'users': list([
        dict({
          'active': True,
          'id': 1,
          'name': 'Alice',
        }),
        dict({
          'active': True,
          'id': 2,
          'name': 'Bob',
        }),
        dict({
          'active': False,
          'id': 3,
          'name': 'Charlie',
        }),
      ]),
    }),
    'metadata': dict({
      'timestamp': '2024-01-15T10:30:00Z',
      'version': 'v2',
    }),
    'status': 'success',
  })
# ---
# name: test_basic_snapshot
  dict({
    'created_at': '2024-01-15T10:30:00Z',
    'email': 'alice@example.com',
    'id': 1,
    'name': 'Alice Johnson',
    'role': 'admin',
  })
# ---
# name: test_dataclass_snapshot
  User(id=42, name='Bob Smith', email='bob@example.com', is_active=True)
# ---
# name: test_exception_message_snapshot
  dict({
    'error_message': 'division by zero',
    'error_type': 'ZeroDivisionError',
    'handled': True,
  })
# ---
# name: test_function_output_snapshot
  dict({
    'count': 7,
    'max': 20.3,
    'mean': 13.642857142857142,
    'min': 8.9,
    'sum': 95.5,
  })
# ---
# name: test_list_comprehension_snapshot
  list([
    dict({
      'number': 2,
      'square': 4,
    }),
    dict({
      'number': 4,
      'square': 16,
    }),
    dict({
      'number': 6,
      'square': 36,
    }),
    dict({
      'number': 8,
      'square': 64,
    }),
    dict({
      'number': 10,
      'square': 100,
    }),
  ])
# ---
# name: test_list_snapshot
  list([
    User(id=1, name='Alice', email='alice@example.com', is_active=True),
    User(id=2, name='Bob', email='bob@example.com', is_active=True),
    User(id=3, name='Charlie', email='charlie@example.com', is_active=False),
  ])
# ---
# name: test_multiple_snapshots[product_snapshot]
  Product(id=101, name='Laptop', price=999.99, tags=['electronics', 'computers'])
# ---
# name: test_multiple_snapshots[user_snapshot]
  User(id=1, name='Alice', email='alice@example.com', is_active=True)
# ---
# name: test_nested_structure_snapshot
  dict({
    'customer': dict({
      'email': 'alice@example.com',
      'id': 1,
      'name': 'Alice Johnson',
    }),
    'items': list([
      dict({
        'name': 'Laptop',
        'price': 999.99,
        'product_id': 101,
        'quantity': 1,
      }),
      dict({
        'name': 'Mouse',
        'price': 25.5,
        'product_id': 102,
        'quantity': 2,
      }),
    ]),
    'order_id': 'ORD-12345',
    'status': 'confirmed',
    'total': 1050.99,
  })
# ---
# name: test_parametrized_snapshot[1-Laptop-999.99-tags0]
  Product(id=1, name='Laptop', price=999.99, tags=['electronics', 'computers'])
# ---
# name: test_parametrized_snapshot[2-Mouse-25.5-tags1]
  Product(id=2, name='Mouse', price=25.5, tags=['electronics', 'accessories'])
# ---
# name: test_parametrized_snapshot[3-Keyboard-75.0-tags2]
  Product(id=3, name='Keyboard', price=75.0, tags=['electronics', 'accessories', 'mechanical'])
# ---
